--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,7 @@ on:
     branches: [master]
 
 env:
-  # TODO: Update to 1.61.0, 1.58-1.60 has regression
-  CI_RUST_TOOLCHAIN: 1.61.0
+  CI_RUST_TOOLCHAIN: 1.63.0-nightly
 
 jobs:
   outdated:
